test/call/object.lox
struct Foo {}

var foo = Foo()
foo() // error: can only call functions and structures
